tests/reference/asr-subroutine1-b6656b7.stderr
semantic error: Assignment to subroutine is not allowed
 --> tests/errors/subroutine1.f90:8:1
  |
8 | bpe = 1
  | ^^^ 
